--- a/templates/nav.html
+++ b/templates/nav.html
@@ -10,11 +10,11 @@
     <div class="nav--left__wrap">
       <a href="{% url 'products:index' %}" class="btn nav--button nav--btn">제품</a>
       <a href="{% url 'recipes:index' %}" class="btn nav--button nav--btn">레시피</a>
-      <form class="search_hidden">
+      <form class="search_hidden" action="{% url 'searchs:search' %}" role="search">
         <div class='d-flex'>
           {% comment %} <span class="nave__search__icon"><i class="bi bi-search"></i></span> {% endcomment %}
           <button type='submit'class='button--reversecolor--clear btn-hover__reverseblue rounded'><i class="bi bi-search"></i></button>
-          <input type="search" placeholder="원하는 상품을 검색해보세요" class= 'form-control' name = "">
+          <input type="search" placeholder="원하는 상품을 검색해보세요" class= 'form-control' aria-label="Search" name='q'>
         </div>
       </form>
     </div>
