--- a/templates/nav.html
+++ b/templates/nav.html
@@ -4,7 +4,7 @@
   <div class="nav--left__wrap">
     <div class="nav--left--image-container">
       <a href="http://127.0.0.1:8000/">
-        <img src="{% static 'image/logo.png' %}" alt="logo" class="nav--image" >             
+        <img src="{% static 'image/logo2.png' %}" alt="logo" class="nav--image" >             
       </a>
     </div>
     <div class="nav--left__wrap">
