--- a/recipes/templates/recipes/detail.html
+++ b/recipes/templates/recipes/detail.html
@@ -94,7 +94,7 @@
 </div>
 
 {% comment %} 댓글 작성 {% endcomment %}
-<h2>레시피 리뷰 <span class='text--main'>{{reviews|length}}</span></h2>
+<h2>레시피 리뷰 </h2>
   <div class="review-submit--container">
     <form action="{% url 'recipes:review_create' recipe.pk %}" method="POST" enctype="multipart/form-data">
       {% csrf_token %}
@@ -134,132 +134,98 @@
       </div>
     </form>
   </div>
-
-  {% comment %} 작성된 댓글 {% endcomment %}
-    {% for review in reviews %}
-    <div class='row '>
-      <span>{{review.user}}</span>
-      <span>{{review.content}}</span>
-      <span>{{review.updated_at|date:"Y-m-d"}}</span>
+  {% comment %} 작성된 포토 리뷰 {% endcomment %}
+  <div id="review-start">
+    <h3>포토 리뷰 모아보기</h3>
+    <div class="owl-carousel owl-theme mb-3">
+      {% for review_with_image in reviews_with_image.all %}
+        <div>
+          <img src="{{ review_with_image.image.url }}" alt="{{ review_with_image.contentn }}의 이미지">
+        </div> 
+      {% endfor %}
     </div>
-    <div class="star-rating">
-      <div>
-        <p>{{ review.comment }}</p>
-        {% for i in "12345" %}
-          {% if forloop.counter <= review.rating %}
-            {% with star_color="#0097F3" %}
-              <i class="bi bi-star-fill star_sub" style="color:{{ star_color }}"></i>
-            {% endwith %}
-          {% else %}
-            {% with star_color="#000" %}
-              <i class="bi bi-star-fill star_sub" style="color:{{ star_color }}"></i>
-            {% endwith %}
-          {% endif %}
-        {% endfor %}
+
+    <div class="recipe__review__status">
+      <h3>작성된 리뷰  <span class='text--main'>{{ reviews|length }}</span></h3>
+    </div>
+    {% for review in reviews %}
+    <div class="recipe__review__container">
+      <div class="recipe__review__info">
+        <div class="recipe__review__info__left">
+          <div class="recipe__review__user__container">
+            {% if review.user.image %}
+            <img class="recipe__user__image" src="{{ review.user.image.url }}" alt="{{ recipe.user.username }}의 프로필 이미지">
+            {% else %}
+            <img class="recipe__user__image" src="{% static 'image/no_image432.png' %}" alt="유저 프로필 사진 없음">
+            {% endif %}
+          </div>
+          <div>
+            <div>
+              {{ review.user.username }}
+            </div>
+            <div>
+              <div class="star-rating">
+                <div>
+                  {% comment %} 별점 표시 {% endcomment %}
+                  <p>{{ review.comment }}</p>
+                  {% for i in "12345" %}
+                    {% if forloop.counter <= review.rating %}
+                      {% with star_color="#0097F3" %}
+                        <i class="bi bi-star-fill star_sub" style="color:{{ star_color }}"></i>
+                      {% endwith %}
+                    {% else %}
+                      {% with star_color="#000" %}
+                        <i class="bi bi-star-fill star_sub" style="color:{{ star_color }}"></i>
+                      {% endwith %}
+                    {% endif %}
+                  {% endfor %}
+                </div>
+              </div>
+              <span class="text--subtle">{{ review.updated_at|date:"Y-m-d" }}</span>
+            </div>
+          </div>
+        </div>
+        <div class="recipe__review__info__right">
+          {% comment %} 리뷰 좋아요 {% endcomment %}
+          <form id="review-like-form-{{ review.pk }}" data-review-id="{{ review.pk }}"  data-recipe-id="{{ recipe.pk }}" class="text--main d-flex align-items-center review-like-form">
+            {% csrf_token %}
+            {% if request.user == review.user %}
+              <div class="text--secondary">
+                <i class="bi bi-heart-fill me-1"></i><span>{{ review.like_user.count }}</span>
+              </div>  
+            {% else %}
+            <button type="submit" class="text--main recipe__review__like__button">
+              {% if request.user in review.like_user.all %}
+              <i class="bi bi-heart-fill me-1"></i>
+              {% else %}
+              <i class="bi bi-heart me-1"></i>
+              {% endif %}
+              <span id="likesCountTag-{{ review.pk }}">{{ review.like_user.count }}</span>
+            </button>
+            {% endif %}
+          </form>
+        </div>
+      </div>
+      <div class="review__content__container">
+        <div>
+          {{ review.content }}
+        </div>
+        {% if review.image %}
+        <div class="recipe__review__image__container">
+          <img class="recipe__review__image" src="{{ review.image.url }}" alt="">
+        </div>
+        {% endif %}
       </div>
     </div>
-  {% endfor %}
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script>
-    var currentRating = 0;
-    var stars = document.querySelectorAll('.star-rating .star')
-    
-    function fillStars(el) {
-      // 호버한 별과 그 앞의 모든 별을 채운다.
-      var rating = el.getAttribute('data-value')
-      for (var i = 0; i < stars.length; i++) {
-        if (i < rating) {
-          stars[i].classList.add('filled')
-        } else {
-          stars[i].classList.remove('filled')
-        }
-      }
-    }
-    
-    function setRating(el) {
-      // 클릭한 별과 그 앞의 모든 별을 채운다.
-      var rating = el.getAttribute('data-value')
-      for (var i = 0; i < stars.length; i++) {
-        if (i < rating) {
-          stars[i].classList.add('selected')
-        } else {
-          stars[i].classList.remove('selected')
-        }
-      }
-      currentRating = rating;
-    
-      // rating 값을 form의 rating input 요소에 할당
-      var ratingInput = document.querySelector('input[name=rating]')
-      ratingInput.value = rating
-    }
-    
-    function unfillStars() {
-      // 모든 별을 검은색으로 변경한다.
-      for (var i = 0; i < stars.length; i++) {
-        stars[i].classList.remove('filled')
-      }
-    }
-    
-    // 이벤트 리스너 추가
-    var starRating = document.querySelector('.star-rating');
-    starRating.addEventListener('mouseover', function(e) {
-      if (e.target.classList.contains('star')) {
-        fillStars(e.target);
-      }
-    })
-    
-    starRating.addEventListener('mouseout', function(e) {
-      if (e.target.classList.contains('star')) {
-        unfillStars();
-      }
-    })
-    
-    starRating.addEventListener('click', function(e) {
-      if (e.target.classList.contains('star')) {
-        setRating(e.target);
-      }
-    })
-    // 사진 업로드 미리보기
-    function previewImages(event) {
-      var input = event.target;
-      var preview = document.getElementById('preview');
-      preview.innerHTML = ''; // clear previous preview images
-      if (input.files && input.files.length > 0) {
-          for (var i = 0; i < input.files.length; i++) {
-              var reader = new FileReader();
-              reader.onload = function(e) {
-                  var img = document.createElement('img');
-                  img.src = e.target.result;
-                  img.className = 'thumbnail';
-                  
-                  var closeBtn = document.createElement('button');
-                  closeBtn.innerText = 'x';
-                  closeBtn.className = 'close-btn';
-                  closeBtn.onclick = function() {
-                      preview.removeChild(wrapper);
-                      input.value = ''; // reset the file input to allow re-selection of the same file
-                  }
-                  
-                  var wrapper = document.createElement('div');
-                  wrapper.className = 'thumbnail-wrapper';
-                  wrapper.appendChild(closeBtn);
-                  wrapper.appendChild(img);
-                  preview.appendChild(wrapper);
-              }
-              reader.readAsDataURL(input.files[i]);
-          }
-      }
-    }
-  </script>
-
-  
+    {% endfor %}
 
 {% comment %} 댓글 삭제 모달 {% endcomment %}
 {% include 'recipes/detail_delete_modal.html' %}
 {% endblock content %}
 
 {% block script %}
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="{% static 'js/recipes_detail_owl.js' %}"></script>
-
+<script src="{% static 'js/recipes_detail.js' %}"></script>
 {% endblock script %}
