--- a/recipes/templates/recipes/create.html
+++ b/recipes/templates/recipes/create.html
@@ -73,7 +73,7 @@
       {{ field.label_tag }}
       {{ field }}
       <input type="hidden" name="crop_y" id="crop-y-input">
-      <input type="hidden" name="crop_height" id="crop-height-input">
+      <input type="hidden" name="container_height" id="container-height-input">
 
     {% elif field.name == 'used_products' %}
     <div class="container used-products__container">
@@ -124,6 +124,7 @@
     
     document.getElementById('overlay-top').style.height = overlayTop + 'px'
     document.getElementById('overlay-bottom').style.height = (imageContainer.offsetHeight - overlayTop - overlayHeight) + 'px'
+    document.getElementById('crop-y-input').value = overlayTop
   }
 
   cropOverlay.addEventListener('mousedown', function(event) {
@@ -171,8 +172,7 @@
         cropOverlay.style.top = overlayTopHeight + 'px'
         maxTop = containerHeight - cropOverlay.offsetHeight
         adjustOverlayHeight()
-        document.getElementById('crop-y-input').value = overlayTopHeight
-        document.getElementById('crop-height-input').value = cropOverlay.offsetHeight
+        document.getElementById('container-height-input').value = containerHeight
       }
     }
 
