--- a/recipes/templates/recipes/create.html
+++ b/recipes/templates/recipes/create.html
@@ -19,6 +19,7 @@
     }
 
     #image-container img {
+      width: 100%;
       max-width: 100%;
       height: auto;
       vertical-align: middle;
@@ -29,7 +30,7 @@
       border: 2px solid blue;
       pointer-events: auto;
       width: 100%;
-      height: 300px;
+      height: 400px;
       z-index: 1;
     }
 
