--- a/static/css/color_attribute.css
+++ b/static/css/color_attribute.css
@@ -10,6 +10,10 @@
   color: var(--subtle-color)
 }
 
+.text--sub {
+  color: var(--sub-color)
+}
+
 .bg--main {
   background-color: var(--main-color);
 }
@@ -20,4 +24,8 @@
 
 .bg--subtle {
   background-color: var(--subtle-color);
+}
+
+.bg--sub {
+  background-color: var(--sub-color);
 }
